--- a/css/chat.css
+++ b/css/chat.css
@@ -393,7 +393,7 @@ Bounce
     padding:15px  15px;
   }
   .chat {
-    margin: 0 auto;
+    margin:20px auto;
     width:90%;
     height: 100vh;
   }
