--- a/css/chat.css
+++ b/css/chat.css
@@ -26,8 +26,8 @@ div#mCSB_1 {
     background-image: url(../images/chat_back_img.png);
     background-repeat: no-repeat;
     background-size: cover;
-  height: 62vh;
     width: 100%;
+    height: 100%;
 }
 .chat-title {
   flex: 0 1 45px;
@@ -393,7 +393,7 @@ Bounce
     padding:15px  15px;
   }
   .chat {
-    margin:20px auto;
+    margin: 0 auto;
     width:90%;
     height: 100vh;
   }
@@ -420,7 +420,8 @@ div#mCSB_1 {
     background-image: url(../images/chat_back_img.png);
     background-repeat: no-repeat;
     background-size: cover;
-   height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .messages .message {
     background: #000;
