--- a/css/chat.css
+++ b/css/chat.css
@@ -14,7 +14,7 @@ Chat
     overflow: hidden;
     box-shadow: 0 5px 30px rgb(0 0 0 / 20%);
     background: rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
+    //border-radius: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -393,8 +393,7 @@ Bounce
     padding:15px  15px;
   }
   .chat {
-    margin: 0 auto;
-    width:90%;
+    width:100%;
     height: 100vh;
   }
   .message-box .message-input {
